# MinixChain

./: rust-toolchain
.github/: Dockerfile
.github/workflows/: build.yml
contracts/: coming-nft_istanbul.sol
node/: Cargo.toml
node/src/: chain_spec.rs  command.rs  rpc.rs  service.rs
pallets/assets/: Cargo.toml
pallets/assets-bridge/: Cargo.toml
pallets/deposit/: Cargo.toml
pallets/ethereum-chain-id/: Cargo.toml
pallets/pallet-coming-auction/: Cargo.toml
pallets/pallet-coming-auction/rpc/: Cargo.toml
pallets/pallet-coming-auction/rpc/runtime-api/: Cargo.toml
pallets/pallet-coming-id/: Cargo.toml
pallets/pallet-coming-id/rpc/: Cargo.toml
pallets/pallet-coming-id/rpc/runtime-api/: Cargo.toml
pallets/pallet-coming-nft/: Cargo.toml
pallets/threshold-signature/: Cargo.toml
pallets/threshold-signature/rpc/: Cargo.toml
pallets/threshold-signature/rpc/runtime-api/: Cargo.toml
pallets/threshold-signature/src/mast/: mod.rs  pmt.rs
runtime/: Cargo.toml
runtime/src/: lib.rs
