[package]
name = "minix"
version = "1.3.0"
authors = ["ChainNet"]
edition = "2018"
build = "build.rs"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[[bin]]
name = "minix"

[dependencies]
structopt = "0.3.8"
jsonrpc-core = "18.0.0"
hex-literal = "0.3.3"
serde = { version = "1.0.119", features = ["derive"] }

# Substrate
sc-cli = { git = 'https://github.com/purestake/substrate.git', branch = "moonbeam-polkadot-v0.9.13", features = ["wasmtime"] }
sc-client-api = { git = 'https://github.com/purestake/substrate.git', branch = "moonbeam-polkadot-v0.9.13" }
sc-consensus = { git = 'https://github.com/purestake/substrate.git', branch = "moonbeam-polkadot-v0.9.13" }
sc-consensus-aura = { git = 'https://github.com/purestake/substrate.git', branch = "moonbeam-polkadot-v0.9.13" }
sc-executor = { git = 'https://github.com/purestake/substrate.git', branch = "moonbeam-polkadot-v0.9.13", features = ["wasmtime"] }
sc-finality-grandpa = { git = 'https://github.com/purestake/substrate.git', branch = "moonbeam-polkadot-v0.9.13" }
sc-keystore = { git = 'https://github.com/purestake/substrate.git', branch = "moonbeam-polkadot-v0.9.13" }
sc-service = { git = 'https://github.com/purestake/substrate.git', branch = "moonbeam-polkadot-v0.9.13", features = ["wasmtime"] }
sc-telemetry = { git = 'https://github.com/purestake/substrate.git', branch = "moonbeam-polkadot-v0.9.13" }
sc-transaction-pool = { git = 'https://github.com/purestake/substrate.git', branch = "moonbeam-polkadot-v0.9.13" }
sc-transaction-pool-api = { git = 'https://github.com/purestake/substrate.git', branch = "moonbeam-polkadot-v0.9.13" }
sc-sync-state-rpc = { git = "https://github.com/purestake/substrate.git", branch = "moonbeam-polkadot-v0.9.13" }
sc-chain-spec = { git = "https://github.com/purestake/substrate.git", branch = "moonbeam-polkadot-v0.9.13" }

sp-consensus-aura = { git = 'https://github.com/purestake/substrate.git', branch = "moonbeam-polkadot-v0.9.13" }
sp-consensus = { git = 'https://github.com/purestake/substrate.git', branch = "moonbeam-polkadot-v0.9.13" }
sp-core = { git = 'https://github.com/purestake/substrate.git', branch = "moonbeam-polkadot-v0.9.13" }
sp-finality-grandpa = { git = 'https://github.com/purestake/substrate.git', branch = "moonbeam-polkadot-v0.9.13" }
sp-inherents = { git = 'https://github.com/purestake/substrate.git', branch = "moonbeam-polkadot-v0.9.13" }
sp-runtime = { git = 'https://github.com/purestake/substrate.git', branch = "moonbeam-polkadot-v0.9.13" }
sp-timestamp = { git = 'https://github.com/purestake/substrate.git', branch = "moonbeam-polkadot-v0.9.13" }

# These dependencies are used for the node template's RPCs
sc-rpc = { git = 'https://github.com/purestake/substrate.git', branch = "moonbeam-polkadot-v0.9.13" }
sc-rpc-api = { git = 'https://github.com/purestake/substrate.git', branch = "moonbeam-polkadot-v0.9.13" }
sc-basic-authorship = { git = 'https://github.com/purestake/substrate.git', branch = "moonbeam-polkadot-v0.9.13" }
sp-api = { git = 'https://github.com/purestake/substrate.git', branch = "moonbeam-polkadot-v0.9.13" }
sp-blockchain = { git = 'https://github.com/purestake/substrate.git', branch = "moonbeam-polkadot-v0.9.13" }
sp-block-builder = { git = 'https://github.com/purestake/substrate.git', branch = "moonbeam-polkadot-v0.9.13" }
substrate-frame-rpc-system = { git = 'https://github.com/purestake/substrate.git', branch = "moonbeam-polkadot-v0.9.13" }
pallet-transaction-payment-rpc = { git = 'https://github.com/purestake/substrate.git', branch = "moonbeam-polkadot-v0.9.13" }

# These dependencies are used for runtime benchmarking
frame-benchmarking = { git = 'https://github.com/purestake/substrate.git', branch = "moonbeam-polkadot-v0.9.13" }
frame-benchmarking-cli = { git = 'https://github.com/purestake/substrate.git', branch = "moonbeam-polkadot-v0.9.13" }

# Minix
pallet-coming-id-rpc = { path = "../pallets/pallet-coming-id/rpc" }
pallet-threshold-signature-rpc = { version = "3.0.0", path = "../pallets/threshold-signature/rpc"}
pallet-coming-auction-rpc = { path = "../pallets/pallet-coming-auction/rpc" }

minix-runtime = { version = "3.0.0", path = "../runtime" }

# EVM
futures = { version = "0.3", features = ["compat"] }
jsonrpc-pubsub = "18.0.0"
sc-network = { git = "https://github.com/purestake/substrate.git", branch = "moonbeam-polkadot-v0.9.13" }
fp-consensus = { git = "https://github.com/nftt-studio/frontier.git", branch = "moonbeam-polkadot-v0.9.13" }
fp-rpc = { git = "https://github.com/nftt-studio/frontier.git", branch = "moonbeam-polkadot-v0.9.13" }
fc-consensus  = { git = "https://github.com/nftt-studio/frontier.git", branch = "moonbeam-polkadot-v0.9.13" }
fc-rpc-core = { git = "https://github.com/nftt-studio/frontier.git", branch = "moonbeam-polkadot-v0.9.13" }
fc-rpc = { git = "https://github.com/nftt-studio/frontier.git", branch = "moonbeam-polkadot-v0.9.13" }
fc-mapping-sync = { git = "https://github.com/nftt-studio/frontier.git", branch = "moonbeam-polkadot-v0.9.13" }
fc-db = { git = "https://github.com/nftt-studio/frontier.git", branch = "moonbeam-polkadot-v0.9.13" }
pallet-ethereum = { git="https://github.com/nftt-studio/frontier.git", branch = "moonbeam-polkadot-v0.9.13" }

[build-dependencies]
substrate-build-script-utils = { git = 'https://github.com/purestake/substrate.git', branch = "moonbeam-polkadot-v0.9.13" }

[features]
default = []
runtime-benchmarks = [
    "minix-runtime/runtime-benchmarks",
]
