[package]
authors = ['Minix Chain Developer']
edition = "2018"
name = "pallet-ethereum-chain-id"
version = "1.0.0"

[dependencies]
codec = { package = "parity-scale-codec", version = "2.3.1", default-features = false, features = ["derive"] }
serde = { version = "1.0.119", optional = true }
scale-info = { version = "1.0.0", default-features = false, features = ["derive"] }

frame-support = { git = "https://github.com/purestake/substrate.git", default-features = false, branch = "moonbeam-polkadot-v0.9.13" }
frame-system = { git = "https://github.com/purestake/substrate.git", default-features = false, branch = "moonbeam-polkadot-v0.9.13" }

[features]
default = ["std"]
std = [
    "codec/std",
    "serde/std",
    "scale-info/std",
    "frame-support/std",
    "frame-system/std",
]
