[package]
authors = ['The ChainX Authors']
name = "pallet-threshold-signature-rpc"
edition = "2018"
version = '3.0.0'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies]
jsonrpc-core = "18.0.0"
jsonrpc-core-client = "18.0.0"
jsonrpc-derive = "18.0.0"
hex = "0.4.3"

sp-std = { git = "https://github.com/purestake/substrate.git", branch = "moonbeam-polkadot-v0.9.13" }
sp-blockchain = { git = "https://github.com/purestake/substrate.git", branch = "moonbeam-polkadot-v0.9.13" }
sp-rpc = { git = "https://github.com/purestake/substrate.git", branch = "moonbeam-polkadot-v0.9.13" }
sp-runtime = { git = "https://github.com/purestake/substrate.git", branch = "moonbeam-polkadot-v0.9.13" }
sp-api = { git = "https://github.com/purestake/substrate.git", branch = "moonbeam-polkadot-v0.9.13" }

pallet-threshold-signature-rpc-runtime-api = { path = "./runtime-api" }

