[package]
authors = ['Minix Chain Developer']
edition = '2018'
name = 'pallet-coming-id-rpc-runtime-api'
version = "1.3.0"
license = "Unlicense"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
sp-api = { git = "https://github.com/purestake/substrate.git", default-features = false, branch = "moonbeam-polkadot-v0.9.13" }
sp-std = { git = "https://github.com/purestake/substrate.git", default-features = false, branch = "moonbeam-polkadot-v0.9.13" }
sp-core = { git = "https://github.com/purestake/substrate.git", default-features = false, branch = "moonbeam-polkadot-v0.9.13" }
codec = { package = "parity-scale-codec", version = "2.3.1", default-features = false, features = ["derive"] }
pallet-coming-id = { default-features = false, path = "../../../pallet-coming-id" }

[features]
default = ["std"]
std = [
	"sp-api/std",
	"sp-std/std",
	"sp-core/std",
	"codec/std",
	"pallet-coming-id/std",
]
