[package]
authors = ['The ChainX Authors']
name = "pallet-threshold-signature-rpc-runtime-api"
edition = "2018"
version = '3.0.0'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies]
sp-api = { git = "https://github.com/purestake/substrate.git", default-features = false, branch = "moonbeam-polkadot-v0.9.13" }
sp-std = { git = "https://github.com/purestake/substrate.git", default-features = false, branch = "moonbeam-polkadot-v0.9.13" }
sp-runtime = { git = "https://github.com/purestake/substrate.git", default-features = false, branch = "moonbeam-polkadot-v0.9.13" }
pallet-threshold-signature = { default-features = false, path = "../../../threshold-signature" }


[features]
default = ["std"]
std = [
    # Substrate primitives
    "sp-api/std",
    "sp-runtime/std",
    "sp-std/std",
    "pallet-threshold-signature/std"
]
